Mapeamento Objeto Relacional

--- a/src/main/resources/application-example-database.properties
+++ b/src/main/resources/application-example-database.properties
@@ -1,8 +1,6 @@
-spring.application.name=bradesco-dio
-
-spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:orcl
-spring.datasource.username=rm98656
-spring.datasource.password=fiap24 
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.username=user
+spring.datasource.password=password 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
@@ -10,7 +8,9 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 
+## no caso de uso de h2Database
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
+
